--- a/android/app/src/main/res/values/colors-splash.xml
+++ b/android/app/src/main/res/values/colors-splash.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="splashprimary">#91A3A3</color>
+    <color name="splashprimary">#546C8C</color>
 </resources>
