--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="0dp"
         android:contentDescription="Splashscreen"
-        android:scaleType="center"
+        android:scaleType="fitCenter"
         android:background="@color/splashprimary"
         android:src="@drawable/splashscreen"/>
 </RelativeLayout>
